--- a/.env
+++ b/.env
@@ -10,4 +10,4 @@ JWT_EXPIRES_IN=100d
 
 # Database
 #mongodb
-DB_URI=mongodb://localhost:27017/test-payment
+DB_URI=mongodb+srv://hoanganh:Hoanganh229@cluster0.xzmso68.mongodb.net/?retryWrites=true&w=majority
