--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 ENV=development
 
 # Server
-PORT=3000
+PORT=3003
 HOST=localhost
 
 # Authecation
@@ -10,4 +10,4 @@ JWT_EXPIRES_IN=100d
 
 # Database
 #mongodb
-DB_URI=mongodb://localhost:27017/test-payment
+DB_URI=mongodb+srv://ngochungnguyen2000dhktyddn:Hung123@cluster0.omrweko.mongodb.net/?retryWrites=true&w=majority
