--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
@@ -73,8 +74,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4",
-    "husky": "^8.0.0"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
