--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -65,6 +66,7 @@
     "eslint": "^8.0.1",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^8.0.0",
     "jest": "29.3.1",
     "prettier": "^2.3.2",
     "source-map-support": "^0.5.20",
@@ -73,8 +75,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^10.0.0",
     "tsconfig-paths": "4.1.1",
-    "typescript": "^4.7.4",
-    "husky": "^8.0.0"
+    "typescript": "^4.7.4"
   },
   "jest": {
     "moduleFileExtensions": [
