--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "mongoose": "^7.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
